--- a/src/main/resources/templates/page/service-inbox.html
+++ b/src/main/resources/templates/page/service-inbox.html
@@ -525,7 +525,7 @@
                 },
                 searchListCB: function (data) {
                     this.pageInfo = data.pageInfo
-                    for (var i = 0; i < this.counselList.length i++) {
+                    for (var i = 0; i < this.counselList.length; i++) {
                         this.counselList[i].idx = i
                         switch (this.counselList[i].pnRegDis) {
                             case 'A':
