요금제페이지 let > var 수정 상담페이지 컴포넌트 ie대응 수정

--- a/src/main/resources/templates/page/carr-mntrt-manage.html
+++ b/src/main/resources/templates/page/carr-mntrt-manage.html
@@ -270,7 +270,7 @@
                         // }
                     }
                     if (chk === 'nUse') {
-                        for (let i = 0; i < this.validateArr.length; i++) {
+                        for (var i = 0; i < this.validateArr.length; i++) {
                             if (this.validateArr[i].mntUseynNo == null) {
                                 nUseChk = true
                                 break
@@ -287,7 +287,7 @@
                         return nUseChk
 
                     } else if (chk === 'use') {
-                        for (let i = 0; i < this.validateArr.length; i++) {
+                        for (var i = 0; i < this.validateArr.length; i++) {
                             if (this.validateArr[i].mntUseynNo != null) {
                                 useChk = true
                                 break
