--- a/src/main/resources/templates/page/service-inbox.html
+++ b/src/main/resources/templates/page/service-inbox.html
@@ -503,7 +503,7 @@
                 },
             },
             components: {
-                vuejsDatepicker
+                'vuejsDatepicker' : vuejsDatepicker
             },
             mounted: function () {
                 var type = 'init'
