--- a/src/main/resources/templates/page/service-visit.html
+++ b/src/main/resources/templates/page/service-visit.html
@@ -645,7 +645,7 @@
                 },
             },
             components: {
-                vuejsDatepicker
+                'vuejsDatepicker': vuejsDatepicker
             },
             mounted: function () {
                 this.getToday()
