--- a/src/main/resources/templates/page/service-visit.html
+++ b/src/main/resources/templates/page/service-visit.html
@@ -636,7 +636,7 @@
                 today: "",
                 disabledDates: {},
                 disabledFn: {
-                    customPredictor(date) {
+                    customPredictor: function(date) {
                         var t = new Date()
                         if (date.getDate() < t.getDate()) {
                             return true;
